--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.hamezksm.foodapp">
     <application
-        android:label="food_app"
+        android:label="foodapp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
