--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,15 +1,20 @@
-allprojects {
+buildscript {
     repositories {
-        google()
-        mavenCentral()
+        google()  // Google's Maven repository
+        mavenCentral()  // Maven Central repository
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.0.0'
+        classpath 'com.google.gms:google-services:4.4.2'  // Google Services plugin
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.0'  // Crashlytics plugin (example)
+        classpath 'com.google.firebase:firebase-appdistribution-gradle:3.0.1'  // Firebase App Distribution plugin
+        // NOTE: Do not place your application dependencies here; they belong in the individual module build.gradle files
     }
 }
 
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
     project.evaluationDependsOn(":app")
 }
 
