--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "food_app",
-    "short_name": "food_app",
+    "name": "foodapp",
+    "short_name": "foodapp",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
