--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -23,7 +23,7 @@ jobs:
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.10.0'  # Adjust to your Flutter version
+        flutter-version: '3.23.0-13.0.pre.69'
 
     - name: Install dependencies
       run: flutter pub get
