--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -27,6 +27,12 @@ jobs:
 
     - name: Install dependencies
       run: flutter pub get
+    
+    - name: Set API_KEY environment variable
+      env:
+        API_KEY: ${{ secrets.API_KEY }}
+      run: |
+        echo "API_KEY=$API_KEY" >> $GITHUB_ENV
 
     - name: Build APK
       run: |
