--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -52,12 +52,28 @@ jobs:
         npm install -g firebase-tools
         firebase --version
 
+    - name: Authenticate to Firebase
+      uses: google-github-actions/auth@v1
+      with:
+        credentials_json: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
+
     - name: Deploy to Firebase App Distribution
       env:
         GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_TOKEN }}
       run: |
-        firebase appdistribution:distribute build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk 
+        echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > ${{ github.workspace }}/firebase-service-account.json
+    
+        firebase appdistribution:distribute build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk \
+          --app $FIREBASE_APP_ID \
+          --groups "testers" \
+          --release-notes "New version available for testing"
 
-        firebase appdistribution:distribute build/app/outputs/flutter-apk/app-arm64-v8a-release.apk 
+        firebase appdistribution:distribute build/app/outputs/flutter-apk/app-arm64-v8a-release.apk \
+          --app $FIREBASE_APP_ID \
+          --groups "testers" \
+          --release-notes "New version available for testing"
 
-        firebase appdistribution:distribute build/app/outputs/flutter-apk/app-x86_64-release.apk 
+        firebase appdistribution:distribute build/app/outputs/flutter-apk/app-x86_64-release.apk \
+          --app $FIREBASE_APP_ID \
+          --groups "testers" \
+          --release-notes "New version available for testing"
