--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -52,10 +52,20 @@ jobs:
         npm install -g firebase-tools
         firebase --version
 
-    - name: Authenticate to Firebase
-      uses: google-github-actions/auth@v1
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
       with:
-        credentials_json: '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}'
+        node-version: '16'  # or any LTS version
+
+    - name: Install Firebase CLI
+      run: npm install -g firebase-tools@11.30.0
+
+    - name: Create Service Account File
+      env:
+        FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+      run: |
+        echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > firebase-service-account.json
+
 
     - name: Deploy to Firebase App Distribution
       env:
