--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -47,44 +47,53 @@ jobs:
         name: apks
         path: build/app/outputs/flutter-apk/*.apk
 
-    - name: Set up Firebase CLI
-      run: |
-        npm install -g firebase-tools
-        firebase --version
+    - name: Set up gcloud CLI
+      uses: google-github-actions/setup-gcloud@v0
+      with:
+        version: '290.0.1'
+        project_id: ${{ secrets.FIREBASE_PROJECT_ID }}
+        service_account_key: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+        export_default_credentials: true
 
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '16'  # or any LTS version
+        node-version: '16'
 
     - name: Install Firebase CLI
       run: npm install -g firebase-tools@11.30.0
 
-    - name: Create Service Account File
-      env:
-        FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
-      run: |
-        echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > firebase-service-account.json
-
-
     - name: Deploy to Firebase App Distribution
       env:
-        GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.FIREBASE_TOKEN }}
         FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+        GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/firebase-service-account.json
       run: |
-        export GOOGLE_APPLICATION_CREDENTIALS="${{ github.workspace }}/firebase-service-account.json"
-    
+        echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > ${{ github.workspace }}/firebase-service-account.json
+        
+        # List APK files to verify paths
+        ls -l build/app/outputs/flutter-apk/
+        
+        # Use gcloud to authenticate
+        gcloud auth activate-service-account --key-file="${{ github.workspace }}/firebase-service-account.json"
+        
+        # Get an access token
+        ACCESS_TOKEN=$(gcloud auth print-access-token)
+        
+        # Use the access token with Firebase CLI
         firebase appdistribution:distribute build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk \
-          --app $FIREBASE_APP_ID \
+          --app "$FIREBASE_APP_ID" \
           --groups "testers" \
-          --release-notes "New version available for testing"
+          --release-notes "New version available for testing" \
+          --token "$ACCESS_TOKEN"
 
         firebase appdistribution:distribute build/app/outputs/flutter-apk/app-arm64-v8a-release.apk \
-          --app $FIREBASE_APP_ID \
+          --app "$FIREBASE_APP_ID" \
           --groups "testers" \
-          --release-notes "New version available for testing"
+          --release-notes "New version available for testing" \
+          --token "$ACCESS_TOKEN"
 
         firebase appdistribution:distribute build/app/outputs/flutter-apk/app-x86_64-release.apk \
-          --app $FIREBASE_APP_ID \
+          --app "$FIREBASE_APP_ID" \
           --groups "testers" \
-          --release-notes "New version available for testing"
+          --release-notes "New version available for testing" \
+          --token "$ACCESS_TOKEN"
