--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -68,7 +68,21 @@ jobs:
         FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
         GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/firebase-service-account.json
       run: |
-        # Use the minimal service account JSON
+       # Create the service account JSON file
+        echo '{
+          "type": "service_account",
+          "project_id": "'"$PROJECT_ID"'",
+          "private_key": "'"$PRIVATE_KEY"'",
+          "client_email": "'"$CLIENT_EMAIL"'",
+          "token_uri": "https://oauth2.googleapis.com/token",
+          "auth_uri": "https://accounts.google.com/o/oauth2/auth",
+          "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs"
+        }' > ${{ github.workspace }}/firebase-service-account.json
+
+        # Double-check the content of the file (BE CAREFUL NOT TO EXPOSE THIS IN PUBLIC LOGS)
+        # cat ${{ github.workspace }}/firebase-service-account.json
+
+        # Use the service account JSON for authentication
         export GOOGLE_APPLICATION_CREDENTIALS="${{ github.workspace }}/firebase-service-account.json"
 
         # Distribute APKs
