--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -86,17 +86,21 @@ jobs:
         export GOOGLE_APPLICATION_CREDENTIALS="${{ github.workspace }}/firebase-service-account.json"
 
         # Distribute APKs
-        firebase appdistribution:distribute build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk \
-          --app "$FIREBASE_APP_ID" \
-          --groups "testers" \
-          --release-notes "New version available for testing"
+        firebase appdistribution:distribute \
 
-        firebase appdistribution:distribute build/app/outputs/flutter-apk/app-arm64-v8a-release.apk \
           --app "$FIREBASE_APP_ID" \
           --groups "testers" \
-          --release-notes "New version available for testing"
+          --release-notes "New version available for testing" \
+          build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk 
 
-        firebase appdistribution:distribute build/app/outputs/flutter-apk/app-x86_64-release.apk \
+        firebase appdistribution:distribute \
           --app "$FIREBASE_APP_ID" \
           --groups "testers" \
-          --release-notes "New version available for testing"
+          --release-notes "New version available for testing" \
+          build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
+
+        firebase appdistribution:distribute \
+          --app "$FIREBASE_APP_ID" \
+          --groups "testers" \
+          --release-notes "New version available for testing" \
+          build/app/outputs/flutter-apk/app-x86_64-release.apk
