--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -54,15 +54,14 @@ jobs:
 
     - name: Deploy to Firebase App Distribution
       env:
+        FIREBASE_ACCOUNT_SERVICE: ${{ secrets.FIREBASE_ACCOUNT_SERVICE }}
         FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
-        SERVICE_ACCOUNT_KEY_PATH: ${{ github.workspace }}/firebase-service-account-key.json
-        APK_PATH: ${{ github.workspace }}/build/app/outputs/flutter-apk/app-release.apk
       run: |
-        echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}' > $SERVICE_ACCOUNT_KEY_PATH
-        export GOOGLE_APPLICATION_CREDENTIALS=$SERVICE_ACCOUNT_KEY_PATH
+        echo "$FIREBASE_ACCOUNT_SERVICE" > firebase-service-account-key.json
+        export GOOGLE_APPLICATION_CREDENTIALS="./firebase-service-account-key.json"
 
         firebase appdistribution:distribute \
           --app "$FIREBASE_APP_ID" \
           --groups "testers" \
           --release-notes "New version available for testing" \
-          "$APK_PATH"
+          "build/app/outputs/flutter-apk/app-release.apk"
