--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -54,14 +54,12 @@ jobs:
 
     - name: Deploy to Firebase App Distribution
       env:
-        FIREBASE_ACCOUNT_SERVICE: ${{ secrets.FIREBASE_ACCOUNT_SERVICE }}
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
       run: |
-        echo "$FIREBASE_ACCOUNT_SERVICE" > firebase-service-account-key.json
-        export GOOGLE_APPLICATION_CREDENTIALS="./firebase-service-account-key.json"
-
         firebase appdistribution:distribute \
           --app "$FIREBASE_APP_ID" \
+          --token "$FIREBASE_TOKEN" \
           --groups "testers" \
           --release-notes "New version available for testing" \
           "build/app/outputs/flutter-apk/app-release.apk"
