--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -47,20 +47,47 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '19'
+        node-version: '18'  # Latest LTS version
 
     - name: Install Firebase CLI
       run: npm install -g firebase-tools
 
     - name: Deploy to Firebase App Distribution
       env:
-        FIREBASE_ACCOUNT_SERVICE: ${{ secrets.FIREBASE_ACCOUNT_SERVICE }}
         FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
+        FIREBASE_REFRESH_TOKEN: ${{ secrets.FIREBASE_REFRESH_TOKEN }}
       run: |
-        echo "$FIREBASE_ACCOUNT_SERVICE" > firebase-service-account-key.json
+        # Authenticate with refresh token
+        firebase login:ci --token "$FIREBASE_REFRESH_TOKEN"
         
-        npx firebase-tools@11.30.0 appdistribution:distribute \
-          --app "$FIREBASE_APP_ID" \
-          --testers "testers" \
-          --release-notes "New version available for testing" \
-          "build/app/outputs/flutter-apk/app-release.apk"
+        echo "APK files:"
+        ls -l build/app/outputs/flutter-apk/
+        
+        # Distribute Universal APK
+        if [ -f "build/app/outputs/flutter-apk/app-release.apk" ]; then
+          echo "Distributing universal APK..."
+          firebase appdistribution:distribute "build/app/outputs/flutter-apk/app-release.apk" \
+            --app "$FIREBASE_APP_ID" \
+            --groups "testers" \
+            --release-notes "New version available for testing"
+        else
+          echo "Universal APK not found, trying architecture-specific APKs..."
+          if [ -f "build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk" ]; then
+            firebase appdistribution:distribute "build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk" \
+              --app "$FIREBASE_APP_ID" \
+              --groups "testers" \
+              --release-notes "New version (armeabi-v7a)"
+          fi
+          if [ -f "build/app/outputs/flutter-apk/app-arm64-v8a-release.apk" ]; then
+            firebase appdistribution:distribute "build/app/outputs/flutter-apk/app-arm64-v8a-release.apk" \
+              --app "$FIREBASE_APP_ID" \
+              --groups "testers" \
+              --release-notes "New version (arm64-v8a)"
+          fi
+          if [ -f "build/app/outputs/flutter-apk/app-x86_64-release.apk" ]; then
+            firebase appdistribution:distribute "build/app/outputs/flutter-apk/app-x86_64-release.apk" \
+              --app "$FIREBASE_APP_ID" \
+              --groups "testers" \
+              --release-notes "New version (x86_64)"
+          fi
+        fi
