Update firebase json

--- a/firebase.json
+++ b/firebase.json
@@ -1,67 +1,1 @@
-# firebase.json content
-echo '{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "food-app-a919a",
-          "appId": "1:55633279730:android:478bbe859f351a77dc2e6b",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "ios": {
-        "default": {
-          "projectId": "food-app-a919a",
-          "appId": "1:55633279730:ios:a130c24492085fccdc2e6b",
-          "uploadDebugSymbols": false,
-          "fileOutput": "ios/Runner/GoogleService-Info.plist"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "food-app-a919a",
-          "configurations": {
-            "android": "1:55633279730:android:478bbe859f351a77dc2e6b",
-            "ios": "1:55633279730:ios:a130c24492085fccdc2e6b"
-          }
-        }
-      }
-    }
-  }
-}' > firebase.json
-
-# Deploy to Firebase
-firebase deploy --only hosting --token "$FIREBASE_REFRESH_TOKEN"
-
-# List APK files
-echo "APK files:"
-ls -l build/app/outputs/flutter-apk/
-
-# Distribute Universal APK
-if [ -f "build/app/outputs/flutter-apk/app-release.apk" ]; then
-  echo "Distributing universal APK..."
-  firebase appdistribution:distribute "build/app/outputs/flutter-apk/app-release.apk" \
-    --app "$FIREBASE_APP_ID" \
-    --groups "testers" \
-    --release-notes "New version available for testing"
-else
-  echo "Universal APK not found, trying architecture-specific APKs..."
-  if [ -f "build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk" ]; then
-    firebase appdistribution:distribute "build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk" \
-      --app "$FIREBASE_APP_ID" \
-      --groups "testers" \
-      --release-notes "New version (armeabi-v7a)"
-  fi
-  if [ -f "build/app/outputs/flutter-apk/app-arm64-v8a-release.apk" ]; then
-    firebase appdistribution:distribute "build/app/outputs/flutter-apk/app-arm64-v8a-release.apk" \
-      --app "$FIREBASE_APP_ID" \
-      --groups "testers" \
-      --release-notes "New version (arm64-v8a)"
-  fi
-  if [ -f "build/app/outputs/flutter-apk/app-x86_64-release.apk" ]; then
-    firebase appdistribution:distribute "build/app/outputs/flutter-apk/app-x86_64-release.apk" \
-      --app "$FIREBASE_APP_ID" \
-      --groups "testers" \
-      --release-notes "New version (x86_64)"
-  fi
-fi
+{"flutter":{"platforms":{"android":{"default":{"projectId":"food-app-a919a","appId":"1:55633279730:android:478bbe859f351a77dc2e6b","fileOutput":"android/app/google-services.json"}},"ios":{"default":{"projectId":"food-app-a919a","appId":"1:55633279730:ios:a130c24492085fccdc2e6b","uploadDebugSymbols":false,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"food-app-a919a","configurations":{"android":"1:55633279730:android:478bbe859f351a77dc2e6b","ios":"1:55633279730:ios:a130c24492085fccdc2e6b"}}}}}}
