--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -18,8 +18,8 @@ jobs:
           java-version: "11"
       - name: Decode google-services.json
         env: 
-            GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
-        run: echo "$GOOGLE_SERVICES_JSON" > android/app/google-services.json
+            FIREBASE_ACCOUNT_SERVICE: ${{ secrets.FIREBASE_ACCOUNT_SERVICE }}
+        run: echo "$FIREBASE_ACCOUNT_SERVICE" > android/app/google-services.json
       - name: Decode firebase_option
         env:
           firebase_options_dart: ${{secrets.FIREBASE_OPTION}}
@@ -37,7 +37,7 @@ jobs:
       - name: upload artifact to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
-            appId: ${{secrets.APPID}}
-            token: ${{secrets.TOKEN}}
+            appId: ${{secrets.FIREBASE_APP_ID}}
+            token: ${{secrets.FIREBASE_REFRESH_TOKEN}}
             groups: pre-tester
             file: build/app/outputs/apk/release/app-release.apk
