--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -1,47 +1,66 @@
-name: Build & upload to Firebase App Distribution
+name: Flutter Build & Deploy
 
 on:
   push:
     branches:
-      - main
+      - main 
+  workflow_dispatch:  
 
 jobs:
-  build:
-
+  build_and_deploy:
+    name: Build & Deploy to Firebase App Distribution
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v2
-        with:
-          distribution: "zulu"
-          java-version: "11"
-      - name: Decode google-services.json
-        env: 
-            FIREBASE_ACCOUNT_SERVICE: ${{ secrets.FIREBASE_ACCOUNT_SERVICE }}
-        run: echo "$FIREBASE_ACCOUNT_SERVICE" > android/app/google-services.json
-      - name: Decode firebase_option
-        env:
-          firebase_options_dart: ${{secrets.FIREBASE_OPTION}}
-        run : echo "$firebase_options_dart" > lib/firebase_options.dart
+    - uses: actions/checkout@v2
 
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: "stable"
-      - run: flutter pub get
-      - run: flutter build apk
-      - uses: actions/upload-artifact@v1
-        with:
-          name: release-apk
-          path: build/app/outputs/apk/release/app-release.apk
-      - name: Decode google-services.json
-        env: 
-          GOOGLE_SERVICES_JSON: ${{ secrets.FIREBASE_ACCOUNT_SERVICE }}
-        run: echo "$GOOGLE_SERVICES_JSON" > android/app/google-services.json
-      - name: upload artifact to Firebase App Distribution
-        uses: wzieba/Firebase-Distribution-Github-Action@v1
-        with:
-            appId: ${{secrets.FIREBASE_APP_ID}}
-            token: ${{secrets.FIREBASE_REFRESH_TOKEN}}
-            groups: pre-tester
-            file: build/app/outputs/apk/release/app-release.apk
+    - name: Set up Java
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'zulu'
+        java-version: '11'
+
+    - name: Set up Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.22.1'
+
+    - name: Install dependencies
+      run: flutter pub get
+    
+    - name: Set API_KEY environment variable
+      env:
+        API_KEY: ${{ secrets.API_KEY }}
+      run: |
+        echo "API_KEY=$API_KEY" >> $GITHUB_ENV
+
+    - name: Create google-services.json
+      run: |
+        echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > android/app/google-services.json
+
+    - name: Build APK
+      run: |
+        flutter build apk --release
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v2
+      with:
+        name: apk
+        path: build/app/outputs/flutter-apk/app-release.apk
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '19'
+
+    - name: Install Firebase CLI
+      run: npm install -g firebase-tools
+
+    - name: Deploy to Firebase App Distribution
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+      run: |
+        firebase appdistribution:distribute build/app/outputs/flutter-apk/app-release.apk \
+          --app "${{ secrets.FIREBASE_APP_ID }}" \
+          --groups "testers" \
+          --release-notes "New version available for testing"
