One more time yaml

--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -56,11 +56,28 @@ jobs:
     - name: Install Firebase CLI
       run: npm install -g firebase-tools
 
-    - name: Deploy to Firebase App Distribution
+    - name: Set up Google Cloud Credentials
       env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        GOOGLE_APPLICATION_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_JSON }}
       run: |
-        firebase appdistribution:distribute build/app/outputs/flutter-apk/app-release.apk \
-          --app "${{ secrets.FIREBASE_APP_ID }}" \
-          --groups "testers" \
-          --release-notes "New version available for testing"
+        echo "$GOOGLE_APPLICATION_CREDENTIALS_JSON" > google-application-credentials.json
+        echo "GOOGLE_APPLICATION_CREDENTIALS=google-application-credentials.json" >> $GITHUB_ENV
+
+    - name: Verify and Deploy APK
+      run: |
+        echo "APK files:"
+        ls -l build/app/outputs/flutter-apk/
+        
+        if [ -f "build/app/outputs/flutter-apk/app-release.apk" ]; then
+          echo "APK found, checking size..."
+          ls -lh build/app/outputs/flutter-apk/app-release.apk
+          
+          echo "Deploying to Firebase App Distribution..."
+          firebase appdistribution:distribute build/app/outputs/flutter-apk/app-release.apk \
+            --app "${{ secrets.FIREBASE_APP_ID }}" \
+            --groups "testers" \
+            --release-notes "New version for testing"
+        else
+          echo "APK not found!"
+          exit 1
+        fi
