--- a/.github/workflows/github_actions.yaml
+++ b/.github/workflows/github_actions.yaml
@@ -58,10 +58,10 @@ jobs:
 
     - name: Set up Google Cloud Credentials
       env:
-        GOOGLE_APPLICATION_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS_JSON }}
+        GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
       run: |
-        echo "$GOOGLE_APPLICATION_CREDENTIALS_JSON" > google-application-credentials.json
-        echo "GOOGLE_APPLICATION_CREDENTIALS=google-application-credentials.json" >> $GITHUB_ENV
+        echo "$GOOGLE_SERVICES_JSON" > google-application-credentials.json
+        echo "GOOGLE_SERVICE=google-application-credentials.json" >> $GITHUB_ENV
 
     - name: Verify and Deploy APK
       run: |
