--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   flutter_mobx: ^2.2.1+1
   provider: ^6.1.2
   firebase_core: ^2.32.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  firebase_auth: ^4.20.0
 
 dev_dependencies:
   flutter_test:
