--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,11 +42,9 @@ android {
 
     buildTypes {
         release {
-            firebaseAppDistribution {
-                serviceCredentialsFile="google-services.json"
-                releaseNotesFile="release_notes.txt"
-                testers="dmwaura@dynamicmobility.co.ke, hamezksm@gmail.com, jamcav097@gmail.com, milleradulu@gmail.com, josiah@tenziapps.com"
-            }
+            // TODO: Add your own signing config for the release build.
+            // Signing with the debug keys for now, so `flutter run --release` works.
+            signingConfig signingConfigs.debug
         }
     }
 }
